start final project

--- a/Week 12 Lab Analysis - Spectrometer.ipynb
+++ b/Week 12 Lab Analysis - Spectrometer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "572e4e43",
    "metadata": {},
    "outputs": [],
@@ -372,8 +372,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a516e8f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"/Users/srajadnya/Desktop/engin11/E11-Labwork/1630711461.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01a1c646",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Pressure</th>\n",
+       "      <th>Relative_Humidity</th>\n",
+       "      <th>Air_Quality_PM1</th>\n",
+       "      <th>Air_Quality_PM2.5</th>\n",
+       "      <th>Air_Quality_PM10</th>\n",
+       "      <th>Timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>81.845</td>\n",
+       "      <td>1002.836</td>\n",
+       "      <td>33.283</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>81.817</td>\n",
+       "      <td>1002.860</td>\n",
+       "      <td>33.222</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>81.808</td>\n",
+       "      <td>1002.843</td>\n",
+       "      <td>33.296</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>81.790</td>\n",
+       "      <td>1002.856</td>\n",
+       "      <td>33.068</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>81.753</td>\n",
+       "      <td>1002.858</td>\n",
+       "      <td>33.149</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>81.176</td>\n",
+       "      <td>1002.844</td>\n",
+       "      <td>33.433</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>81.185</td>\n",
+       "      <td>1002.854</td>\n",
+       "      <td>33.611</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>81.176</td>\n",
+       "      <td>1002.842</td>\n",
+       "      <td>33.556</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>81.185</td>\n",
+       "      <td>1002.855</td>\n",
+       "      <td>33.537</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>81.203</td>\n",
+       "      <td>1002.819</td>\n",
+       "      <td>33.500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>267 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Temperature   Pressure   Relative_Humidity   Air_Quality_PM1  \\\n",
+       "0         81.845   1002.836              33.283                 1   \n",
+       "1         81.817   1002.860              33.222                 1   \n",
+       "2         81.808   1002.843              33.296                 1   \n",
+       "3         81.790   1002.856              33.068                 1   \n",
+       "4         81.753   1002.858              33.149                 1   \n",
+       "..           ...        ...                 ...               ...   \n",
+       "262       81.176   1002.844              33.433                 1   \n",
+       "263       81.185   1002.854              33.611                 1   \n",
+       "264       81.176   1002.842              33.556                 1   \n",
+       "265       81.185   1002.855              33.537                 1   \n",
+       "266       81.203   1002.819              33.500                 1   \n",
+       "\n",
+       "      Air_Quality_PM2.5   Air_Quality_PM10   Timestamp  \n",
+       "0                     2                  3           1  \n",
+       "1                     2                  3           2  \n",
+       "2                     2                  3           3  \n",
+       "3                     2                  3           4  \n",
+       "4                     2                  3           5  \n",
+       "..                  ...                ...         ...  \n",
+       "262                   2                  3         296  \n",
+       "263                   2                  3         297  \n",
+       "264                   2                  3         298  \n",
+       "265                   2                  3         299  \n",
+       "266                   2                  3         300  \n",
+       "\n",
+       "[267 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ad67ef8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      81.845\n",
+       "1      81.817\n",
+       "2      81.808\n",
+       "3      81.790\n",
+       "4      81.753\n",
+       "        ...  \n",
+       "262    81.176\n",
+       "263    81.185\n",
+       "264    81.176\n",
+       "265    81.185\n",
+       "266    81.203\n",
+       "Name: Temperature, Length: 267, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"Temperature\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "053e7213",
    "metadata": {},
    "outputs": [],
    "source": []
