parse_data completed

--- a/Week 13 Lab.ipynb
+++ b/Week 13 Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9750ef91",
+   "id": "e228e811",
    "metadata": {},
    "source": [
     "Sidhant Rajadnya - 11/29"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c0a29396",
+   "id": "4f1505f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "a7e0fbd7",
+   "execution_count": 100,
+   "id": "6d87a603",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Epoch time</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Air Quality PM 2.5 (ug/m3)</th>\n",
+       "      <th>Radiation (cps)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.637359e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.637359e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>29.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.637359e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>34.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.637359e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>32.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.637359e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>1.637360e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>23.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>1.637360e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>27.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>1.637360e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>27.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>1.637360e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>31.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>1.637360e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>28.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>155 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Epoch time  Latitude  Longitude  Air Quality PM 2.5 (ug/m3)  \\\n",
+       "0    1.637359e+09         0          0                         4.0   \n",
+       "1    1.637359e+09         0          0                         4.0   \n",
+       "2    1.637359e+09         0          0                         4.0   \n",
+       "3    1.637359e+09         0          0                         4.0   \n",
+       "4    1.637359e+09         0          0                         4.0   \n",
+       "..            ...       ...        ...                         ...   \n",
+       "150  1.637360e+09         0          0                         4.0   \n",
+       "151  1.637360e+09         0          0                         4.0   \n",
+       "152  1.637360e+09         0          0                         4.0   \n",
+       "153  1.637360e+09         0          0                         4.0   \n",
+       "154  1.637360e+09         0          0                         3.0   \n",
+       "\n",
+       "     Radiation (cps)  \n",
+       "0               28.4  \n",
+       "1               29.4  \n",
+       "2               34.6  \n",
+       "3               32.4  \n",
+       "4               28.2  \n",
+       "..               ...  \n",
+       "150             23.6  \n",
+       "151             27.4  \n",
+       "152             27.8  \n",
+       "153             31.4  \n",
+       "154             28.4  \n",
+       "\n",
+       "[155 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_0 = pd.read_csv(\"/Users/r03si/Desktop/E11-Labwork/Map-data-0.csv\")"
+    "data_0 = pd.read_csv(\"/Users/r03si/Desktop/E11-Labwork/Map-data-0.csv\")\n",
+    "data_0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "5769a300",
+   "id": "48a73303",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0c416a99",
+   "id": "db0aa62e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "b1ee5240",
+   "id": "28127a3d",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "5c07ce00",
+   "id": "8a536221",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "d593fa83",
+   "id": "c59afd27",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "198c50ba",
+   "id": "4edaa011",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "32a6e32f",
+   "id": "75965ab5",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46483df6",
+   "id": "227009a5",
    "metadata": {},
    "source": [
     "There is more variation from using counting statistics than variation from the experimental data. From this we observe that the sources of radiation contributing to our data are inherently high variation sources, which is why it is important to take multiple readings of data and aggregate it (find a mean, etc.)."
