--- a/Final Project/Data_Analysis_Final.ipynb
+++ b/Final Project/Data_Analysis_Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "85e8dded",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "edc96561",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "e30faa2f",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 11,
    "id": "3abb6924",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
     "    for i in range(1, len(knowns)):\n",
     "        all_pairs.append(list(zip(unknowns, knowns[i:] + knowns[:i])))\n",
     "        \n",
-    "    error = lambda x: sum([n[0]/n[1] for n in x])\n",
+    "    error = lambda x: sum([(n[0]-n[1])**2 for n in x])\n",
     "    \n",
     "    least_error = min(all_pairs, key=error)\n",
     "    \n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 12,
    "id": "d23c9848",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 13,
    "id": "a01defad",
    "metadata": {},
    "outputs": [
